<resources>
    <string name="app_name">Inventory Denisa</string>
    <string name="editor_activity_title_new_item">New item</string>
    <string name="editor_activity_title_edit_item">Edit item</string>
    <string name="insert_dummy">Insert dummy data</string>
    <string name="delete_all">Delete all items</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="supplier">Supplier</string>
    <string name="price">Price</string>
    <string name="unit_czech_crown">Kc</string>
    <string name="product_name">Product name</string>
    <string name="quantity">Quantity</string>
    <string name="phone">Supplier phone</string>
    <string name="supplier_amazon">Amazon</string>
    <string name="supplier_gogo">GoGo</string>
    <string name="supplier_mobile_world">Mobile World</string>
    <string name="supplier_blue_day">Blue Day</string>
    <string name="supplier_computers_inc">Computers INC</string>
    <string name="supplier_unknown">Unknown</string>
    <string name="insert_failed">Insert failed</string>
    <string name="insert_succes">Item saved!</string>
    <string name="update_failed">Update failed</string>
    <string name="update_succes">Update saved!</string>
    <string name="empty_view_text">You don´t have any item in storage.</string>
    <string name="empty_view_text_two">Start by clicking on plus button.</string>
    <string name="unsaved_changes_dialog_msg">Unsaved changes</string>
    <string name="discard">Discard?</string>
    <string name="keep_editing">Keep editing please</string>
    <string name="editor_delete_success">Item was deleted</string>
    <string name="editor_delete_fail">Error with deleting item</string>
    <string name="delete_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="need_supp">Supplier required.</string>
    <string name="need_price">Price required.</string>
    <string name="need_quant">Quantity required.</string>
    <string name="need_phone">Supplier phone required.</string>
    <string name="need_name">Name of item required.</string>
    <string name="quantity_out_of_order">We are sold out!</string>
    <string name="blank_edit">Need to fill in details.</string>
</resources>
